# andromeda

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
migrations/: env.py
migrations/versions/: 001_add_google_oauth.py  002_add_github_oauth.py  11992cbc409d_initial.py  14b16f3bd1c8_update_users_table_2.py  2275d459751b_initial.py  2bad9bb33736_create_status_tables.py  36895688534e_update_last_login_in_users.py  3d7bce504480_composite_check_history_index.py  4e7d3784b89f_test_upgrade.py  51e4739bfcd4_update_users_table_4.py  5514b43479c6_update_key_table.py  68b87fd10acd_update_uptime_range_constraint_to_.py  6cff5efda473_update_status_tables.py  715ab9ecc531_add_indexing_to_users_table.py  950a8c1da12b_update_user_tables.py  9604fc227dbe_update_last_login.py  978b8184c67a_update_users_table_5.py  a222e7dc6990_add_avatar_and_last_login_to_user_table.py  a3f1c8e2b047_add_service_check_fields.py  b3fbf4efc4fe_update_users_table.py  b5c9e3f2a1d8_rename_service_ids_to_galacti_domains.py  c6d7e8f9a0b1_fix_missing_service_check_columns.py  cf507c2298b2_update_user_table.py  e15f38a3c191_seed_core_status_data.py  ef55491ddf9d_improve_and_optimize_user_models.py
src/Andromeda/: config.py
src/Andromeda/api/: errors.py
src/Andromeda/auth/: dependancies.py  hashing.py
src/Andromeda/models/: node.py  notification.py  status.py  user.py
tests/: _worst_status_unit_test.py  health_service_unit_test.py  middleware_integration_test.py  test_api_key_utils.py
(+22 files in other folders)
